@@ -33,7 +33,7 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 	@SuppressWarnings("unused")
 	@Override
 	public SolutionType solve(DHRobot robot,Matrix4d targetMatrix,DHKeyframe keyframe) {
-		DHLink link4 = robot.links.getLast();
+		DHLink link4 = robot.links.get(robot.links.size()-1);
 
 		Matrix4d targetPoseAdj = new Matrix4d(targetMatrix);
 		
@@ -49,8 +49,8 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 		
 		Point3d p4 = new Point3d(m4.m03,m4.m13,m4.m23);
 
-		double a1 = robot.links.get(0).r;
-		double a2 = robot.links.get(1).r;
+		double a1 = robot.links.get(0).getR();
+		double a2 = robot.links.get(1).getR();
 		
 		double b = a1;
 		double a = a2;
@@ -73,7 +73,7 @@ public class DHIKSolver_SCARA extends DHIKSolver {
 		keyframe.fkValues[0]=Math.toDegrees(tau-phi2); 
 		
 		Point3d p3 = new Point3d(p4);
-		p3.z = robot.links.get(0).d;
+		p3.z = robot.links.get(0).getD();
 		Point3d p2 = new Point3d(Math.cos(phi),Math.sin(phi),p3.z);
 		
 		// the height
